# crypted-messages

./: CONTRIBUTING.MD  Cargo.toml  Cross.toml  Makefile  README.md  build-all.bat  build.bat  build.sh  buildl-all.bat  rust-toolchain.toml
.github/workflows/: build-windows.yml  main.yml  makefile.yml  release.yml
src/: client.rs  main.rs  server copy.rs  server.rs  tools.rs
