[package]
name = "crypted-messages"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Vélez"]

[[bin]]
name = "crypted-messages"
path = "src/main.rs"

# [[bin]]
# name = "crypted-messages-non-tokio"
# path = "src/main-non-tokio.rs"

# [[bin]]
# name = "server"
# path = "src/server.rs"

# [[bin]]
# name = "client"
# path = "src/client.rs"

[dependencies]
# aes = "0.8.4"
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
# sha2 = "0.10.8"
rand = "0.8.5"
# time = "0.3.36"
local-ip-address = "0.6.2"
# termcolor = "1.4.1"
aes-gcm = "0.10.3"
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["full"] }
# warp = "0.3.7"
# futures = "0.3.30"
# tokio-util = { version = "0.7.12", features = ["io-util"] }
crossterm = "0.28.1"

[profile.release]
opt-level = "z"
lto = true
# panic = "abort"

