[package]
name = "crypted-messages"
version = "0.2.7"
edition = "2021"
authors = ["Francisco Vélez"]

[[bin]]
name = "crypted-messages"
path = "src/main.rs"

# [[bin]]
# name = "server"
# path = "src/server.rs"

# [[bin]]
# name = "client"
# path = "src/client.rs"

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rand = "0.8.5"
local-ip-address = "0.6.3"
aes-gcm = "0.10.3"
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["full"] }
crossterm = "0.28.1"
chrono = {version = "0.4.38", features = ["serde"]}
regex = "1.10.6"

[profile.release]
opt-level = "z"
lto = true
# panic = "abort"